fixed 100% vh at bg and overflow hidden

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,6 +2,8 @@
   /* background: transparent ; */
   width: 100%;
   /* height: 100%; */
+  /* height: 100%; */
+  box-sizing: border-box;
  }
 .container-img-header {
   /* width: 375px;
@@ -12,6 +14,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-sizing: border-box;
   /* align-items: center; */
 }
 .img-logo-header {
@@ -19,8 +22,10 @@
   margin: 0;
   width: 40px;
   height: 40px;
+  box-sizing: border-box;
 }
 .icon-burguer-header {
   width: 24px;
   height: 21px;
+  box-sizing: border-box;
 }
