--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
-  font-family: 'Bellefair', serif;
-  --color-very-dark-navy: #0B0D17;
-  --color-light-blue: #D0D6F9;
+  font-family: "Bellefair", serif;
+  --color-very-dark-navy: #0b0d17;
+  --color-light-blue: #d0d6f9;
   --color-white: #ffffff;
 
   color-scheme: light dark;
@@ -12,12 +12,20 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* width: 100%;
+  height: 100%; */
+  /* overflow: hidden; */
 }
+body,
 body {
   margin: 0;
-  display: grid;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  overflow-y: hidden;
+  padding: 0;
+  /* display: grid;
+  place-items: center; */
+  width: 100%;
+  height: 100%;
+  /* min-width: 320px;
+  min-height: 100vh; */
+  /* overflow: hidden; */
 }
