--- a/src/routes/Crew/Crew.css
+++ b/src/routes/Crew/Crew.css
@@ -3,17 +3,20 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
 }
 .container-crew {
   margin: 0;
-
+  overflow-y: hidden;
   width: 100vw;
-  height: 100%;
+  /* height: 100%; */
   padding: 24px;
   box-sizing: border-box;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 362px 350px;
+  grid-template-rows: 1fr 1fr;
   /* row-gap: 5%; */
   row-gap: 32px;
   grid-template-areas:
