--- a/src/routes/Home/Home.css
+++ b/src/routes/Home/Home.css
@@ -1,33 +1,42 @@
-.container-bg{
-  background-image: url('/background-home-mobile.jpg');
+.container-bg {
+  background-image: url("/background-home-mobile.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: bottom center;
+  /* background-attachment: fixed; */
+  box-sizing: border-box;
+  height: 100vh;
 }
 .container-home {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-y: hidden;
   width: 100vw;
-  height: 100vh;
+  /* max-width: 100%;
+  max-height: 100%; */
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 294px 1fr;
+  grid-template-rows: auto 1fr;
   grid-template-areas:
     "main main"
     "section section";
 }
 
 .container-main {
+  height: 318px;
   grid-area: main;
   padding: 24px 24px 0 24px;
   display: flex;
+  flex-wrap: 1;
   flex-direction: column;
   /* justify-content: center; */
   align-items: center;
   text-align: center;
   gap: 24px;
+  box-sizing: border-box;
 }
-.container-main>span {
+.container-main > span {
   font-family: "Barlow Condensed";
   font-style: normal;
   font-weight: 400;
@@ -36,6 +45,7 @@
   text-align: center;
   letter-spacing: 0.15em;
   color: var(--color-light-blue);
+  box-sizing: border-box;
 }
 .container-main .title-main {
   margin: 0;
@@ -43,6 +53,7 @@
   font-weight: 400;
   font-size: 80px;
   line-height: 92px;
+  box-sizing: border-box;
 }
 .container-main .paragraph-main {
   margin: 0;
@@ -51,14 +62,17 @@
   font-weight: 400;
   font-size: 15px;
   line-height: 180%;
+  box-sizing: border-box;
 }
 
 .container-button-circle {
+  height: 382px;
   grid-area: section;
   padding: 0 24px 24px 24px;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
 }
 .container-button-circle > button {
   width: 144px;
@@ -66,6 +80,7 @@
   background-color: white;
   border-radius: 50%;
   border: none;
+  box-sizing: border-box;
 }
 .container-button-circle .button-cicle > a {
   text-decoration: none;
@@ -75,4 +90,5 @@
   font-size: 18px;
   line-height: 21px;
   color: var(--color-very-dark-navy);
+  box-sizing: border-box;
 }
